<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom">
        <!-- Record button -->
        <com.joytan.rec.main.view.MyFAB
            android:id="@+id/fab_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="44dp"
            android:onClick="@{viewModel::onRecordClicked}"
            android:visibility="@{viewModel.recordVisibility}"
            app:myFabColor="@color/record_button"
            app:myFabIcon="@drawable/ic_mic_white_24dp" />
        <!-- Play button -->
        <com.joytan.rec.main.view.MyFAB
            android:id="@+id/fab_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="44dp"
            android:onClick="@{viewModel::onPlayClicked}"
            android:visibility="@{viewModel.playVisibility}"
            app:myFabColor="@color/play_button"
            app:myFabIcon="@drawable/ic_play_arrow_white_24dp" />
        <!-- Delete button -->
        <com.joytan.rec.main.view.MyFAB
            android:id="@+id/fab_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="44dp"
            android:onClick="@{viewModel::onDeleteClicked}"
            android:visibility="@{viewModel.deleteVisibility}"
            app:myFabColor="@color/record_button"
            app:myFabIcon="@drawable/ic_delete_white_24dp"
            app:myFabSize="mini" />

        <!-- Re-play button -->
        <com.joytan.rec.main.view.MyFAB
            android:id="@+id/fab_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="44dp"
            android:onClick="@{viewModel::onReplayClicked}"
            android:visibility="@{viewModel.replayVisibility}"
            app:myFabColor="@color/check"
            app:myFabIcon="@drawable/ic_play_arrow_white_24dp"
            app:myFabSize="mini" />

        <!-- Share button -->
        <com.joytan.rec.main.view.MyFAB
            android:id="@+id/fab_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="130dp"
            android:layout_marginBottom="44dp"
            android:onClick="@{viewModel::onShareClicked}"
            android:visibility="@{viewModel.shareVisibility}"
            app:myFabColor="@color/check"
            app:myFabIcon="@drawable/ic_send_white_24dp"
            app:myFabSize="mini" />

        <!-- Setting button -->
        <com.joytan.rec.main.view.MyFAB
            android:id="@+id/fab_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="130dp"
            android:layout_marginBottom="44dp"
            android:onClick="@{viewModel::onCommentClicked}"
            android:visibility="visible"
            app:myFabColor="@android:color/darker_gray"
            app:myFabIcon="@drawable/ic_comment_bubble_24dp"
            app:myFabSize="mini" />
    </FrameLayout>

    <data>
        <variable
            name="viewModel"
            type="com.joytan.rec.main.MainViewModel" />
    </data>
</layout>